--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     $('#m').val('');
                     return false;
                 });
+                // Capture a `chat message` event.
+                socket.on('chat message', function (msg) {
+                    $('#messages').append($('<li>').text(msg));
+                });
             });
         </script>
 
